@@ -1,3 +1,8 @@
+2017-12-29  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_functions.js:
+	Modify getItemDetail function.
+
 2017-12-28  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/pages/options.html (Style to be inserted):
